# JiaPlayer

app/: build.gradle
app/src/androidTest/java/com/jingjing/study/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Stranger.aac
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jingjing/study/: MainActivity.kt  NavHostActivity.kt
app/src/main/java/com/jingjing/study/audio/: AudioCodec.java  AudioFragment.kt  AudioPlayerAACHelper.kt  AudioPlayerHelper.kt  AudioPlayerPcmHelper.kt  AudioRecordAsynHelper.kt  AudioRecordHelper.kt  Constants.kt  LiveTaskManager.java  PcmToWavUtil.java
app/src/main/java/com/jingjing/study/extension/: LogX.kt
app/src/main/res/layout/: activity_nav_host.xml  fragment_audio.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jingjing/study/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
